--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <title>Nikki Pfeifer Resume</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body background="https://i.pinimg.com/originals/f9/f7/1c/f9f71ca27560524f8c9786f431501e34.png">
+
   <div>
-    <h1>Nikki Pfeifer</h1> 
+    <h1>Nikki Pfeifer</h1>
     <a href="mailto:nicolexpfeifer@gmail.com">nicolexpfeifer@gmail.com</a>
     <h2>Driven, Self-Starter, Compassionate</h2>
-  </div>
+  </div
     
   <div class="exp-header">
     <h3>Professional Experience:</h3>
@@ -62,19 +63,20 @@
     </ul>
   </div>
    
- <div class="exp-header">
+  <div class="exp-header">
     <h3>Education:</h3>
- </div>
+  </div>
  
- <div>
+  <div>
     <p>Bachelor of Science | Minnesota State University, Mankato - Completed 2012</p>
     <p>Majors: Marketing, Spanish</p>     
     <p>Technical Skills: Mac & PC, Adobe, Office 365, MS Office Suite (Excel, Word, PowerPoint, Outlook), 
        Google Suite, Saleslogix, XCM, Practice Management, QuickBooks Online, Sage, Peachtree, ProSystem FX, SurePrep</p>
- </div>
+  </div>
+  
+  
   
  <div class="footer">
- </div>
-  
+    </div>
 </body>
   </html>
