--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body background="https://i.pinimg.com/originals/f9/f7/1c/f9f71ca27560524f8c9786f431501e34.png">
 
-  <div>
+  <div class="item">
     <h1>Nikki Pfeifer</h1>
     <a href="mailto:nicolexpfeifer@gmail.com">nicolexpfeifer@gmail.com</a>
     <h2>Driven, Self-Starter, Compassionate</h2>
@@ -64,6 +64,7 @@
   </div>
    
   <div class="exp-header">
+    <div class="item"/>
     <h3>Education:</h3>
   </div>
  
@@ -73,10 +74,9 @@
     <p>Technical Skills: Mac & PC, Adobe, Office 365, MS Office Suite (Excel, Word, PowerPoint, Outlook), 
        Google Suite, Saleslogix, XCM, Practice Management, QuickBooks Online, Sage, Peachtree, ProSystem FX, SurePrep</p>
   </div>
-  
-  
-  
- <div class="footer">
+    
+  <div class="footer">
     </div>
+  
 </body>
   </html>
