--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>Nikki Pfeifer Resume</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css" />
+ 
 </head>
 <body background="https://i.pinimg.com/originals/f9/f7/1c/f9f71ca27560524f8c9786f431501e34.png">
 
@@ -74,9 +76,9 @@
     <p>Technical Skills: Mac & PC, Adobe, Office 365, MS Office Suite (Excel, Word, PowerPoint, Outlook), 
        Google Suite, Saleslogix, XCM, Practice Management, QuickBooks Online, Sage, Peachtree, ProSystem FX, SurePrep</p>
   </div>
-    
-  <div class="footer">
-    </div>
   
+  <div class="footer">
+    
+  </div>
 </body>
   </html>
